# Genethic

./: CMakeLists.txt
src/: Abstract_Parser.h  CMakeLists.txt  Lower_Diag_Parser.cpp  Lower_Diag_Parser.h  Parser.cpp  Parser.h  main.cpp
src/genethic-lib/: Habitat.cpp  Habitat.h  Individual.cpp  Individual.h  Population.cpp  Population.h
tst/: CMakeLists.txt  Individual-test.cpp  Parser-test.cpp  Population-test.cpp
